<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/blank"
        android:textSize="36sp" />
    
    <TextView
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1"
        android:gravity="center"
        android:text="@string/Login"
        android:textSize="24sp" />
    
    <TextView
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:gravity="center"
        android:text="@string/blank"
        android:textSize="24sp" />
    
    <EditText android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/space2"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    
    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:inputType="textPassword"
        android:hint="@string/password" />
    
    <TextView
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:gravity="center"
        android:text="@string/blank"
        android:textSize="24sp" />
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/space3"
        android:background="@color/blue"
        android:text="@string/submit"
        android:textColor="@color/white" />
    
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btnLogin"
        android:background="@color/gray"
        android:text="@string/register"
        android:textColor="@color/darkgray" />

</RelativeLayout>
